Fixed overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -8,17 +8,24 @@ body {
     background-image:
     linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
     linear-gradient(#eee .1em, transparent .1em);
-    background-size: 100% 1.2em;
+    background-size: 100vh 1.2em;
+}
+
+#full-height { 
+    height: 100vh;
 }
 
 #left-nav {
 	background-color: #eee;
-	height: 100%;
+	height: 90vh;
 }
 #iframe { 
-	height: 100%;
+	height: 90vh;
 }
 
-#full-height { 
-	height: 100%;
+
+div.scroll {
+height: 90vh; 
+overflow: auto;
+padding: 8px;
 }
